# suraga-website

./: .dockerignore  .gitignore  .vercelignore  ARCHITECTURE_REPORT.json  ARCHITECTURE_REPORT.md  ARCHITECTURE_UPGRADE_SUMMARY.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  build-wasm.mjs  build.bat  build_and_run.bat  package-lock.json  package.json  playwright.config.mjs  render.static.yaml  render.verification.yaml  render.yaml  scratch_fetch.mjs  server.js  setup-git.bat  tsconfig.json  update_css_1.js  update_css_1.mjs  update_css_2.mjs  update_css_3.mjs  vercel.json
.github/workflows/: ci.yml  deploy.yml
api/: contact.js  health.js
api/_lib/: verification.js
api/verification/: [...path].js
assets/breenoconfig/: bottom_search_switch_capabilities.json  bottom_search_switch_config.json
custom-shells/: README.md
custom-shells/cpp-shell/: .gitignore  build-msvc.bat  mysh.cpp
custom-shells/rust-shell/: Cargo.toml
docs/: architecture.md
docs/adr/: 0001-render-rust-static-hosting.md  0002-generated-bilingual-pages.md
frontend/: build.bat  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
nginx/: default.conf.template  security-headers-framable.conf  security-headers.conf
plans/: whatsapp-verification-plan.md
public/: JESS_Application_Suraga_Elzibaer_Filled_2026.docx  PolarQuant.md  ar.html  config.json  fill_jess_application.py  fill_sbs_application.py  index.html  robots.txt  sitemap.xml  verify-whatsapp.html
scratch/: sync.mjs
scripts/: build-assets.mjs  build-images.mjs  build-pages.mjs  build-web-app.mjs  capture-screenshot.mjs  check-js-syntax.mjs  compress-assets.mjs  critical.css  scrape-idioms-to-pdf.mjs  x-unrepost-openclaw.ps1
site-src/: content.mjs
src/: db.rs  error.rs  handlers.rs  main.rs  models.rs
ts/: background.ts  main.ts
wasm-src/: CMakeLists.txt
wasm-src/include/: wasm_api.h
wasm-src/src/: bindings.cpp  meshgen.cpp  physics.cpp
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
(+172 files in other folders)
